[gd_scene load_steps=2 format=3 uid="uid://dlkcde7rlksrk"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/stats_menu.gd" id="1_enee4"]

[node name="stats_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enee4")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1164.0
offset_bottom = 667.0
color = Color(0.492416, 0.658999, 0.893626, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = -10.0
offset_right = 320.0
offset_bottom = 98.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 75
text = "Player"

[node name="Leveltxt" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 90.0
offset_right = 742.0
offset_bottom = 139.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "Level"

[node name="Nxt_Lvl_Txt" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 125.0
offset_right = 742.0
offset_bottom = 174.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
text = "EXP:"

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 155.0
offset_right = 701.0
offset_bottom = 575.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "EXP:"

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 7.0
offset_right = 1139.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "X"

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 0
offset_left = 767.0
offset_top = 552.0
offset_right = 1134.0
offset_bottom = 624.0

[node name="Allocation_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 302.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "+"

[node name="Allocation_Text" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 18.0
offset_right = 296.0
offset_bottom = 74.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.157318, 0.20294, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Upgrade"

[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
[connection signal="button_up" from="Panel/Allocation_button" to="." method="_on_allocation_button_button_up"]
